// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI > interactive basercms4 1`] = `
[
  "✔  ++ <tmpDir>/.claude/commands/debug-diff.md",
  "✔  ++ <tmpDir>/.claude/commands/fix-component.md",
  "✔  ++ <tmpDir>/.claude/commands/git.md",
  "✔  ++ <tmpDir>/.claude/commands/release.md",
  "✔  ++ <tmpDir>/.claude/settings.json",
  "✔  ++ <tmpDir>/.cursor/mcp.json",
  "✔  ++ <tmpDir>/.editorconfig",
  "✔  ++ <tmpDir>/.gitignore",
  "✔  ++ <tmpDir>/.husky/pre-commit",
  "✔  ++ <tmpDir>/.mcp.json",
  "✔  ++ <tmpDir>/.npmignore",
  "✔  ++ <tmpDir>/.postcssrc.js",
  "✔  ++ <tmpDir>/.prettierrc.mjs",
  "✔  ++ <tmpDir>/.pug-lintrc",
  "✔  ++ <tmpDir>/.stylelintrc",
  "✔  ++ <tmpDir>/.textlintignore",
  "✔  ++ <tmpDir>/.textlintrc.js",
  "✔  ++ <tmpDir>/.vscode/extensions.json",
  "✔  ++ <tmpDir>/.vscode/settings.json",
  "✔  ++ <tmpDir>/.yarnrc.yml",
  "✔  ++ <tmpDir>/CHANGELOG.md",
  "✔  ++ <tmpDir>/CLAUDE.md",
  "✔  ++ <tmpDir>/README.md",
  "✔  ++ <tmpDir>/__assets/_libs/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card-list.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-content-index.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-content-main.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-footer.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-footer.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-header.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-header.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media-list.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-breadcrumb.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-breadcrumb.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-global.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-global.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-sitemap.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-sitemap.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-page-home.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-page-sub.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-pagination.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-pagination.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-title-page.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-title-page.pug",
  "✔  ++ <tmpDir>/__assets/_libs/data/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/_libs/data/bge-blocks-v2.html",
  "✔  ++ <tmpDir>/__assets/_libs/data/bge-blocks.html",
  "✔  ++ <tmpDir>/__assets/_libs/data/blocks.js",
  "✔  ++ <tmpDir>/__assets/_libs/data/data.yml",
  "✔  ++ <tmpDir>/__assets/_libs/img/bg-arrow.svg",
  "✔  ++ <tmpDir>/__assets/_libs/img/bg-repeat-01.gif",
  "✔  ++ <tmpDir>/__assets/_libs/layouts/home.pug",
  "✔  ++ <tmpDir>/__assets/_libs/layouts/sub.pug",
  "✔  ++ <tmpDir>/__assets/_libs/mixin/meta-basercms.pug",
  "✔  ++ <tmpDir>/__assets/_libs/mixin/meta.pug",
  "✔  ++ <tmpDir>/__assets/_libs/script/index.ts",
  "✔  ++ <tmpDir>/__assets/_libs/style/base/root.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/all.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/body.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/button.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/img.css",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/000_home.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/000_home.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/100_sub.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/100_sub.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/200_blog_index.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/200_blog_index.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/210_blog_index.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/210_blog_index.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/300_form_input.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/300_form_input.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/301_form_confirm.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/301_form_confirm.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/302_form_complete.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/302_form_complete.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/index.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/css/bge_style.css",
  "✔  ++ <tmpDir>/__assets/htdocs/css/style.css",
  "✔  ++ <tmpDir>/__assets/htdocs/js/script.ts",
  "✔  ++ <tmpDir>/__assets/htdocs/sample/index.html",
  "✔  ++ <tmpDir>/__info/print.txt",
  "✔  ++ <tmpDir>/burgereditor.config.js",
  "✔  ++ <tmpDir>/cspell.json",
  "✔  ++ <tmpDir>/eslint.config.js",
  "✔  ++ <tmpDir>/htdocs/__tmpl/__burger_editor/img/bg-sample.png",
  "✔  ++ <tmpDir>/htdocs/__tmpl/__burger_editor/js/bge_modules/bge_functions.min.js",
  "✔  ++ <tmpDir>/htdocs/files/images/sample.png",
  "✔  ++ <tmpDir>/kamado.config.ts",
  "✔  ++ <tmpDir>/lint-staged.config.mjs",
  "✔  ++ <tmpDir>/markuplint.config.js",
  "✔  ++ <tmpDir>/package.json",
  "✔  ++ <tmpDir>/prh.yaml",
  "✔  ++ <tmpDir>/tsconfig.json",
  "✔  Install dependencies skipped",
  "✔  Finalize finalized",
]
`;

exports[`CLI > npx --type basercms4 1`] = `
[
  "✔  ++ <tmpDir>/.claude/commands/debug-diff.md",
  "✔  ++ <tmpDir>/.claude/commands/fix-component.md",
  "✔  ++ <tmpDir>/.claude/commands/git.md",
  "✔  ++ <tmpDir>/.claude/commands/release.md",
  "✔  ++ <tmpDir>/.claude/settings.json",
  "✔  ++ <tmpDir>/.cursor/mcp.json",
  "✔  ++ <tmpDir>/.editorconfig",
  "✔  ++ <tmpDir>/.gitignore",
  "✔  ++ <tmpDir>/.husky/pre-commit",
  "✔  ++ <tmpDir>/.mcp.json",
  "✔  ++ <tmpDir>/.npmignore",
  "✔  ++ <tmpDir>/.postcssrc.js",
  "✔  ++ <tmpDir>/.prettierrc.mjs",
  "✔  ++ <tmpDir>/.pug-lintrc",
  "✔  ++ <tmpDir>/.stylelintrc",
  "✔  ++ <tmpDir>/.textlintignore",
  "✔  ++ <tmpDir>/.textlintrc.js",
  "✔  ++ <tmpDir>/.vscode/extensions.json",
  "✔  ++ <tmpDir>/.vscode/settings.json",
  "✔  ++ <tmpDir>/.yarnrc.yml",
  "✔  ++ <tmpDir>/CHANGELOG.md",
  "✔  ++ <tmpDir>/CLAUDE.md",
  "✔  ++ <tmpDir>/README.md",
  "✔  ++ <tmpDir>/__assets/_libs/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card-list.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-content-index.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-content-main.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-footer.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-footer.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-header.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-header.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media-list.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-breadcrumb.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-breadcrumb.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-global.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-global.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-sitemap.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-sitemap.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-page-home.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-page-sub.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-pagination.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-pagination.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-title-page.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-title-page.pug",
  "✔  ++ <tmpDir>/__assets/_libs/data/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/_libs/data/bge-blocks-v2.html",
  "✔  ++ <tmpDir>/__assets/_libs/data/bge-blocks.html",
  "✔  ++ <tmpDir>/__assets/_libs/data/blocks.js",
  "✔  ++ <tmpDir>/__assets/_libs/data/data.yml",
  "✔  ++ <tmpDir>/__assets/_libs/img/bg-arrow.svg",
  "✔  ++ <tmpDir>/__assets/_libs/img/bg-repeat-01.gif",
  "✔  ++ <tmpDir>/__assets/_libs/layouts/home.pug",
  "✔  ++ <tmpDir>/__assets/_libs/layouts/sub.pug",
  "✔  ++ <tmpDir>/__assets/_libs/mixin/meta-basercms.pug",
  "✔  ++ <tmpDir>/__assets/_libs/mixin/meta.pug",
  "✔  ++ <tmpDir>/__assets/_libs/script/index.ts",
  "✔  ++ <tmpDir>/__assets/_libs/style/base/root.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/all.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/body.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/button.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/img.css",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/000_home.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/000_home.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/100_sub.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/100_sub.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/200_blog_index.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/200_blog_index.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/210_blog_index.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/210_blog_index.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/300_form_input.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/300_form_input.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/301_form_confirm.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/301_form_confirm.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/302_form_complete.json",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/302_form_complete.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/__tmpl/index.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/css/bge_style.css",
  "✔  ++ <tmpDir>/__assets/htdocs/css/style.css",
  "✔  ++ <tmpDir>/__assets/htdocs/js/script.ts",
  "✔  ++ <tmpDir>/__assets/htdocs/sample/index.html",
  "✔  ++ <tmpDir>/__info/print.txt",
  "✔  ++ <tmpDir>/burgereditor.config.js",
  "✔  ++ <tmpDir>/cspell.json",
  "✔  ++ <tmpDir>/eslint.config.js",
  "✔  ++ <tmpDir>/htdocs/__tmpl/__burger_editor/img/bg-sample.png",
  "✔  ++ <tmpDir>/htdocs/__tmpl/__burger_editor/js/bge_modules/bge_functions.min.js",
  "✔  ++ <tmpDir>/htdocs/files/images/sample.png",
  "✔  ++ <tmpDir>/kamado.config.ts",
  "✔  ++ <tmpDir>/lint-staged.config.mjs",
  "✔  ++ <tmpDir>/markuplint.config.js",
  "✔  ++ <tmpDir>/package.json",
  "✔  ++ <tmpDir>/prh.yaml",
  "✔  ++ <tmpDir>/tsconfig.json",
  "✔  Install dependencies skipped",
  "✔  Finalize finalized",
]
`;

exports[`CLI > npx --type static 1`] = `
[
  "✔  ++ <tmpDir>/.claude/commands/debug-diff.md",
  "✔  ++ <tmpDir>/.claude/commands/fix-component.md",
  "✔  ++ <tmpDir>/.claude/commands/git.md",
  "✔  ++ <tmpDir>/.claude/commands/release.md",
  "✔  ++ <tmpDir>/.claude/settings.json",
  "✔  ++ <tmpDir>/.cursor/mcp.json",
  "✔  ++ <tmpDir>/.editorconfig",
  "✔  ++ <tmpDir>/.gitignore",
  "✔  ++ <tmpDir>/.husky/pre-commit",
  "✔  ++ <tmpDir>/.mcp.json",
  "✔  ++ <tmpDir>/.npmignore",
  "✔  ++ <tmpDir>/.postcssrc.js",
  "✔  ++ <tmpDir>/.prettierrc.mjs",
  "✔  ++ <tmpDir>/.pug-lintrc",
  "✔  ++ <tmpDir>/.stylelintrc",
  "✔  ++ <tmpDir>/.textlintignore",
  "✔  ++ <tmpDir>/.textlintrc.js",
  "✔  ++ <tmpDir>/.vscode/extensions.json",
  "✔  ++ <tmpDir>/.vscode/settings.json",
  "✔  ++ <tmpDir>/.yarnrc.yml",
  "✔  ++ <tmpDir>/CHANGELOG.md",
  "✔  ++ <tmpDir>/CLAUDE.md",
  "✔  ++ <tmpDir>/README.md",
  "✔  ++ <tmpDir>/__assets/_libs/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card-list.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-content-index.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-content-main.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-footer.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-footer.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-header.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-header.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media-list.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-breadcrumb.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-breadcrumb.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-global.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-global.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-sitemap.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-sitemap.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-page-home.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-page-sub.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-pagination.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-pagination.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-title-page.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-title-page.pug",
  "✔  ++ <tmpDir>/__assets/_libs/data/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/_libs/data/bge-blocks-v2.html",
  "✔  ++ <tmpDir>/__assets/_libs/data/bge-blocks.html",
  "✔  ++ <tmpDir>/__assets/_libs/data/blocks.js",
  "✔  ++ <tmpDir>/__assets/_libs/data/data.yml",
  "✔  ++ <tmpDir>/__assets/_libs/img/bg-arrow.svg",
  "✔  ++ <tmpDir>/__assets/_libs/img/bg-repeat-01.gif",
  "✔  ++ <tmpDir>/__assets/_libs/layouts/home.pug",
  "✔  ++ <tmpDir>/__assets/_libs/layouts/sub.pug",
  "✔  ++ <tmpDir>/__assets/_libs/mixin/meta-basercms.pug",
  "✔  ++ <tmpDir>/__assets/_libs/mixin/meta.pug",
  "✔  ++ <tmpDir>/__assets/_libs/script/index.ts",
  "✔  ++ <tmpDir>/__assets/_libs/style/base/root.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/all.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/body.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/button.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/img.css",
  "✔  ++ <tmpDir>/__assets/htdocs/css/style.css",
  "✔  ++ <tmpDir>/__assets/htdocs/index.json",
  "✔  ++ <tmpDir>/__assets/htdocs/index.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/js/script.ts",
  "✔  ++ <tmpDir>/__assets/htdocs/sample/index.html",
  "✔  ++ <tmpDir>/__info/print.txt",
  "✔  ++ <tmpDir>/burgereditor.config.js",
  "✔  ++ <tmpDir>/cspell.json",
  "✔  ++ <tmpDir>/eslint.config.js",
  "✔  ++ <tmpDir>/htdocs/files/images/sample.png",
  "✔  ++ <tmpDir>/kamado.config.ts",
  "✔  ++ <tmpDir>/lint-staged.config.mjs",
  "✔  ++ <tmpDir>/markuplint.config.js",
  "✔  ++ <tmpDir>/package.json",
  "✔  ++ <tmpDir>/prh.yaml",
  "✔  ++ <tmpDir>/tsconfig.json",
  "✔  Install dependencies skipped",
  "✔  Finalize finalized",
]
`;

exports[`CLI > npx 1`] = `
[
  "✔  ++ <tmpDir>/.claude/commands/debug-diff.md",
  "✔  ++ <tmpDir>/.claude/commands/fix-component.md",
  "✔  ++ <tmpDir>/.claude/commands/git.md",
  "✔  ++ <tmpDir>/.claude/commands/release.md",
  "✔  ++ <tmpDir>/.claude/settings.json",
  "✔  ++ <tmpDir>/.cursor/mcp.json",
  "✔  ++ <tmpDir>/.editorconfig",
  "✔  ++ <tmpDir>/.gitignore",
  "✔  ++ <tmpDir>/.husky/pre-commit",
  "✔  ++ <tmpDir>/.mcp.json",
  "✔  ++ <tmpDir>/.npmignore",
  "✔  ++ <tmpDir>/.postcssrc.js",
  "✔  ++ <tmpDir>/.prettierrc.mjs",
  "✔  ++ <tmpDir>/.pug-lintrc",
  "✔  ++ <tmpDir>/.stylelintrc",
  "✔  ++ <tmpDir>/.textlintignore",
  "✔  ++ <tmpDir>/.textlintrc.js",
  "✔  ++ <tmpDir>/.vscode/extensions.json",
  "✔  ++ <tmpDir>/.vscode/settings.json",
  "✔  ++ <tmpDir>/.yarnrc.yml",
  "✔  ++ <tmpDir>/CHANGELOG.md",
  "✔  ++ <tmpDir>/CLAUDE.md",
  "✔  ++ <tmpDir>/README.md",
  "✔  ++ <tmpDir>/__assets/_libs/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card-list.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-card.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-content-index.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-content-main.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-footer.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-footer.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-header.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-header.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media-list.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-media.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-breadcrumb.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-breadcrumb.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-global.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-global.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-sitemap.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-nav-sitemap.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-page-home.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-page-sub.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-pagination.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-pagination.pug",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-title-page.css",
  "✔  ++ <tmpDir>/__assets/_libs/component/c-title-page.pug",
  "✔  ++ <tmpDir>/__assets/_libs/data/.markuplintrc",
  "✔  ++ <tmpDir>/__assets/_libs/data/bge-blocks-v2.html",
  "✔  ++ <tmpDir>/__assets/_libs/data/bge-blocks.html",
  "✔  ++ <tmpDir>/__assets/_libs/data/blocks.js",
  "✔  ++ <tmpDir>/__assets/_libs/data/data.yml",
  "✔  ++ <tmpDir>/__assets/_libs/img/bg-arrow.svg",
  "✔  ++ <tmpDir>/__assets/_libs/img/bg-repeat-01.gif",
  "✔  ++ <tmpDir>/__assets/_libs/layouts/home.pug",
  "✔  ++ <tmpDir>/__assets/_libs/layouts/sub.pug",
  "✔  ++ <tmpDir>/__assets/_libs/mixin/meta-basercms.pug",
  "✔  ++ <tmpDir>/__assets/_libs/mixin/meta.pug",
  "✔  ++ <tmpDir>/__assets/_libs/script/index.ts",
  "✔  ++ <tmpDir>/__assets/_libs/style/base/root.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/all.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/body.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/button.css",
  "✔  ++ <tmpDir>/__assets/_libs/style/general/img.css",
  "✔  ++ <tmpDir>/__assets/htdocs/css/style.css",
  "✔  ++ <tmpDir>/__assets/htdocs/index.json",
  "✔  ++ <tmpDir>/__assets/htdocs/index.pug",
  "✔  ++ <tmpDir>/__assets/htdocs/js/script.ts",
  "✔  ++ <tmpDir>/__assets/htdocs/sample/index.html",
  "✔  ++ <tmpDir>/__info/print.txt",
  "✔  ++ <tmpDir>/burgereditor.config.js",
  "✔  ++ <tmpDir>/cspell.json",
  "✔  ++ <tmpDir>/eslint.config.js",
  "✔  ++ <tmpDir>/htdocs/files/images/sample.png",
  "✔  ++ <tmpDir>/kamado.config.ts",
  "✔  ++ <tmpDir>/lint-staged.config.mjs",
  "✔  ++ <tmpDir>/markuplint.config.js",
  "✔  ++ <tmpDir>/package.json",
  "✔  ++ <tmpDir>/prh.yaml",
  "✔  ++ <tmpDir>/tsconfig.json",
  "✔  Install dependencies skipped",
  "✔  Finalize finalized",
]
`;
